# BSUIR_Labs_Operating-systems-and-environments

./: .gitignore  readme.md
.github/workflows/: run-tests-LR4.yml
LR1/: list_of_entities.sh  log.txt  measure_time.sh  processes.sh  readme.md  statistics.sh  test.sh
LR2/: crosses-and-zeros.sh  readme.md
LR3/: data-for-queries.csv  get-queries-from-csv.sh  output-query.txt  parse-url.sh  readme.md  url.txt  verify-url.sh
LR4/: readme.md
LR4/check_text_for_errors/: CMakeLists.txt  Makefile  Readme.md  main.cpp  test.cpp  test_program
LR4/check_text_for_errors/data_reader/: data_reader.cpp  data_reader.hpp
LR4/check_text_for_errors/errors_checker/: errors_checker.cpp  errors_checker.hpp
LR4/check_text_for_errors/lib/: Makefile  data_reader.cpp  errors_checker.cpp  utils.cpp
LR4/check_text_for_errors/utils/: utils.hpp
LR4/combine_libs/: CMakeLists.txt
LR4/libs_combination/: CMakeLists.txt  Makefile  Readme.md  dictionary.txt  main  main.cpp  text.txt
LR4/libs_combination/external_libs/static/include/: errors_checker.hpp
LR4/replace_words/: CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  convert_text.hpp  data_reader.cpp  data_reader.hpp  file_reader.cpp  file_reader.hpp  input_text.txt  main.cpp  test.cpp  test_app  utils.hpp  words_to_change.txt
LR4/replace_words/convert_text/: convert_text.hpp
LR4/replace_words/lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  get_shared_library.sh
LR4/replace_words/lib/convert_text/: convert_text.cpp
LR4/replace_words/lib/data_reader/: data_reader.hpp
LR4/replace_words/lib/include/: convert_text.hpp  data_reader.hpp
LR4/replace_words/lib/src/: convert_text.cpp  data_reader.cpp  utils.cpp
LR4/replace_words/utils/: utils.cpp
LR5/Daemon/: CMakeLists.txt  main.cpp
LR5/processes_interaction/: .gitignore  (+7 more)
(+17 files in other folders)
